Linked js and css, google maps API

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Get Outside</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <script src="js/main.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsX8KS4Zwv4O0u9TAtRq6mws2gITH_RcA&callback=initMap"
+    async defer></script>
 </body>
 </html>
+
