--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <h1>Get Outside</h1>
+    <div id="map">
+
+    </div>
+
     <script src="js/main.js"></script>
+    <script>
+        function initMap() {
+            var options = {
+                zoom: 8,
+                center: {lat: 43.6532, lng: -79.3832}
+            };
+            var map = new google.maps.Map(document.getElementById('map'), options);
+        }
+    </script>
+    <!-- Google maps API-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsX8KS4Zwv4O0u9TAtRq6mws2gITH_RcA&callback=initMap"
     async defer></script>
 </body>
