Centered map around usser's location

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     </div>
 
     <script src="js/main.js"></script>
+    <script>
+        getUserLocation();
+    </script>
     <!-- Google maps API-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsX8KS4Zwv4O0u9TAtRq6mws2gITH_RcA&callback=initMap"
     async defer></script>
