Search results return resturants within specified km radius around user location

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         
     </script>
     <!-- Google maps API-->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsX8KS4Zwv4O0u9TAtRq6mws2gITH_RcA"
-></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsX8KS4Zwv4O0u9TAtRq6mws2gITH_RcA&libraries=places"
+    async defer></script>
+
 </body>
 </html>
 
