map.html now grabs user location from localStorage and centers the map around it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/main.css">
     
 </head>
-<body>
+<body onload="getUserLocation()">
     
     <div class="home" id="home">  
         <h1>Get Outside</h1>
