--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
     
     <div class="home" id="home">  
         <h1>Get Outside</h1>
-        <p>Explore. Exercise. Get Outside.</p>
-        <p>10, 000 steps | 8 Km | 5 Miles</p>
+        <p class="tagline">Explore. Exercise. Get Outside.</p>
+        <p>Enter the distance you would like to travel from your current location:</p>
         <input id="distance" type="text" placeholder="Enter km..">
+        <footer>
+            <p class="disclaimer">Note: Allow Location services in order for this application to work.</p>
+            <div>
+                 <a class = "github" href="https://github.com/nolbuzanis/Get-Outside">Github</a>
+                <span class="copyright">© Copyright 2018 Nolan Buzanis</span>
+            </div>
+        </footer>
         <button id="search">
             <svg PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M24.291,14.276L14.705,4.69c-0.878-0.878-2.317-0.878-3.195,0l-0.8,0.8c-0.878,0.877-0.878,2.316,0,3.194  L18.024,16l-7.315,7.315c-0.878,0.878-0.878,2.317,0,3.194l0.8,0.8c0.878,0.879,2.317,0.879,3.195,0l9.586-9.587  c0.472-0.471,0.682-1.103,0.647-1.723C24.973,15.38,24.763,14.748,24.291,14.276z" fill="#515151"/></svg>
         </button>
